--- a/styles.css
+++ b/styles.css
@@ -38,4 +38,35 @@ body {
   button:hover {
     background-color: #0056b3;
   }
+
+  /* Add styles for the legend */
+.legend {
+    background-color: white;
+    border: 1px solid #999;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 10px;
+    padding: 10px;
+    position: absolute;
+    right: 0;
+    top: 80px;
+    z-index: 1;
+  }
+  
+  .legend-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+  }
+  
+  .legend-item:last-child {
+    margin-bottom: 0;
+  }
+  
+  .legend-icon {
+    height: 15px;
+    margin-right: 5px;
+    width: auto;
+  }
+  
   
