--- a/styles.css
+++ b/styles.css
@@ -40,33 +40,15 @@ body {
   }
 
   /* Add styles for the legend */
-.legend {
-    background-color: white;
-    border: 1px solid #999;
-    font-size: 14px;
-    font-weight: bold;
-    margin: 10px;
-    padding: 10px;
+  .gmap-legend {
     position: absolute;
-    right: 0;
-    top: 80px;
     z-index: 1;
-  }
-  
-  .legend-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-  }
-  
-  .legend-item:last-child {
-    margin-bottom: 0;
-  }
-  
-  .legend-icon {
-    height: 15px;
-    margin-right: 5px;
-    width: auto;
+    top: 10px;
+    right: 10px;
+    background: rgba(255, 255, 255, 0.8);
+    padding: 10px;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
   }
   
   
