--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,16 @@ body {
   }
   
   .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     background-color: white;
     padding: 15px 25px;
     font-size: 24px;
     font-weight: bold;
     color: #004B87;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
   }
+
   
   .logo {
     height: 25px;
