--- a/styles.css
+++ b/styles.css
@@ -1,56 +1,69 @@
+/* Add this to your styles.css file */
+
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    padding: 0;
   }
   
   .header {
-    background-color: white;
-    padding: 15px 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #333;
+    padding: 10px 20px;
+    color: #fff;
     font-size: 24px;
-    font-weight: bold;
-    color: #004B87;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
-  
-  .logo {
-    height: 25px;
-    width: auto;
   }
   
-  #map {
-    height: calc(100vh - 80px);
-    width: 100%;
+  .header .logo {
+    width: 150px;
+    margin-right: 20px;
+  }
+  
+  .header div {
+    display: flex;
+    align-items: center;
   }
   
   button {
-    background-color: #0088cc;
+    background-color: #4CAF50;
     border: none;
-    border-radius: 4px;
     color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
     font-size: 16px;
-    margin: 5px;
-    padding: 4px 8px;
+    margin: 4px 2px;
     cursor: pointer;
+    border-radius: 12px;
+    padding: 10px 24px;
   }
   
-  button:hover {
-    background-color: #0056b3;
+  #map {
+    width: 100%;
+    height: 100vh; /* Adjust the map height to occupy the entire viewport */
   }
   
-  /* Add styles for the legend */
   .gmap-legend {
-    position: absolute;
-    z-index: 1;
-    top: 100px;
-    right: 10px;
-    background: rgba(255, 255, 255, 0.8);
+    background-color: white;
     padding: 10px;
-    border-radius: 5px;
-    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    border: 1px solid #ccc;
   }
+  
+  .legend-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+  }
+  
+  .legend-icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+  }
+  
 
   .features-section {
     background-color: #f8f9fa;
