--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
   }
   
   #map {
+    margin-top: 150px;
     width: 100%;
     height: 100vh; /* Adjust the map height to occupy the entire viewport */
   }
@@ -66,25 +67,44 @@ body {
   
 
   .features-section {
+    padding: 50px 0;
     background-color: #f8f9fa;
-    padding: 40px;
+    text-align: center;
   }
   
-  .features-section h2 {
-    text-align: center;
+  .features-title {
+    font-size: 36px;
+    font-weight: 500;
+    margin-bottom: 30px;
+  }
+  
+  .feature-card {
+    padding: 15px;
+  }
+  
+  .card {
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    border-radius: 8px;
+    padding: 30px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .feature-icon {
+    width: 80px;
+    height: 80px;
     margin-bottom: 20px;
   }
   
-  .features-section ul {
-    list-style-type: disc;
-    font-size: 18px;
-    line-height: 1.6;
-    padding-left: 20px;
+  .card h3 {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 15px;
   }
   
-  .features-section li {
-    margin-bottom: 10px;
+  .card p {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
   }
-  
-  
   
