--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* Add this to your styles.css file */
-
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -41,10 +39,11 @@ body {
   }
   
   #map {
-    margin-top: 150px;
+    margin-top: 100px; /* Increase the margin-top to create more space */
     width: 100%;
-    height: 100vh; /* Adjust the map height to occupy the entire viewport */
+    height: calc(100vh - 100px); /* Adjust the map height to occupy the remaining viewport */
   }
+  
   
   .gmap-legend {
     background-color: white;
