--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,45 @@
+/* Add this to your styles.css file */
+
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    padding: 0;
   }
   
   .header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-    padding: 10px 20px;
-    color: #fff;
+    background-color: white;
+    padding: 15px 25px;
     font-size: 24px;
+    font-weight: bold;
+    color: #004B87;
   }
   
-  .header .logo {
-    width: 150px;
-    margin-right: 20px;
-  }
-  
-  .header div {
-    display: flex;
-    align-items: center;
-  }
-  
-  button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 12px;
-    padding: 10px 24px;
+  .logo {
+    height: 40px;
+    width: auto;
   }
   
   #map {
-    margin-top: 100px; /* Increase the margin-top to create more space */
+    height: calc(100vh - 80px);
     width: 100%;
-    height: calc(100vh - 100px); /* Adjust the map height to occupy the remaining viewport */
   }
   
+  button {
+    background-color: #0088cc;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    font-size: 16px;
+    margin: 5px;
+    padding: 4px 8px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
   
   .gmap-legend {
     background-color: white;
@@ -66,44 +62,25 @@ body {
   
 
   .features-section {
-    padding: 50px 0;
     background-color: #f8f9fa;
+    padding: 40px;
+  }
+  
+  .features-section h2 {
     text-align: center;
-  }
-  
-  .features-title {
-    font-size: 36px;
-    font-weight: 500;
-    margin-bottom: 30px;
-  }
-  
-  .feature-card {
-    padding: 15px;
-  }
-  
-  .card {
-    background-color: #fff;
-    border: 1px solid #e5e5e5;
-    border-radius: 8px;
-    padding: 30px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .feature-icon {
-    width: 80px;
-    height: 80px;
     margin-bottom: 20px;
   }
   
-  .card h3 {
-    font-size: 24px;
-    font-weight: 500;
-    margin-bottom: 15px;
+  .features-section ul {
+    list-style-type: disc;
+    font-size: 18px;
+    line-height: 1.6;
+    padding-left: 20px;
   }
   
-  .card p {
-    font-size: 16px;
-    line-height: 1.5;
-    color: #333;
+  .features-section li {
+    margin-bottom: 10px;
   }
+  
+  
   
